vlib/v/parser/tests/expr_evaluated_but_not_used_e.vv
fn main() {
	mut array := [1, 2, 3]
	array << 4, 5
	println(array)
}
